<resources>
    <string name="app_name">Katalog Movie</string>
    <string name="str_gambar_poster">Poster Image</string>
    <string name="str_detail">Detail</string>
    <string name="str_ellips" translatable="false">…</string>
    <string name="str_overview">Overview</string>
    <string name="str_rilis_pada">Release on :</string>
    <string name="str_score">Score :</string>
    <string name="str_movie">Movie</string>
    <string name="str_tv_show">TV Show</string>
    <string name="str_settings">Settings</string>
    <string name="str_about_me">Aboout Me</string>

    <string name="str_general_settings">General Settings</string>
    <string name="str_summary_language">The language to be displayed is applied, including the movie overview will be replaced with the selected language</string>
    <string name="str_language_app">Application Language</string>
    <string name="str_summary_custlanguage">You can set application language if you check this box</string>
    <string name="str_custom_language">Custom Language</string>
    <string name="str_error">Something happen, please try again</string>
    <string name="str_favorite">Favorite</string>
    <string name="str_beranda">Home</string>
    <string name="str_empty">There is no data that can be displayed</string>
<<<<<<< HEAD
    <string name="cari">Cari</string>
    <string name="str_dailyreminder">Daily Reminder</string>
    <string name="str_releasereminder">Release Reminder</string>
    <string name="str_releasetoday"> Released!</string>
    <string name="str_dailyrminder_title">Hey i got something for you!</string>
    <string name="str_dailyrminder_text">We have good movie to look, so lets check it out!</string>
    <string name="str_releasereminder_summary">Provides information about movies released today</string>
    <string name="str_dailyreminder_summary">Provides information to invite you to see the latest movie</string>
=======
>>>>>>> f06c9266104ac9b6156f5b30189cda8740b14d76


</resources>
