<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/str_general_settings">
        <SwitchPreference
            android:key="release_reminder"
            android:summary="@string/str_releasereminder_summary"
            android:title="@string/str_releasereminder" />
        <SwitchPreference
            android:key="daily_reminder"
            android:summary="@string/str_dailyreminder_summary"
            android:title="@string/str_dailyreminder" />
        <CheckBoxPreference
            android:key="custom_language"
            android:summary="@string/str_summary_custlanguage"
            android:title="@string/str_custom_language" />
        <ListPreference
            android:defaultValue="in"
            android:dependency="custom_language"
            android:entries="@array/language_caption"
            android:entryValues="@array/language_values"
            android:key="language"
            android:summary="@string/str_summary_language"
            android:title="@string/str_language_app" />
    </PreferenceCategory>
</PreferenceScreen>